--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 #logo {
     display: block;
     margin: auto;
-    width: 15%;
+    width: 13%;
     height: auto;
     padding: 10px 0px 15px 0px;
 }
@@ -36,7 +36,11 @@ body {
 
 .position input {
     font-family: roboto, sans-serif;
-    margin: 20px 0 0 15px;
+    font-size: 1.5rem;
+    font-weight: bold;
+    border: none;
+    background-color: #F2F2F2;
+    margin: 14px 0 12px 66px;
 }
 
 .position label {
