--- a/style.css
+++ b/style.css
@@ -61,6 +61,10 @@ body {
 }
 
 .explore {
+    background-color: #F5F5F5;
+}
+
+.explore button {
     font-family: roboto, sans-serif;
     text-decoration: white;
     font-weight: bold;
