--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
     background-color: #F5F5F5;
 }
 
-.explore button {
+.explore {
     font-family: roboto, sans-serif;
     text-decoration: white;
     font-weight: bold;
