--- a/style.css
+++ b/style.css
@@ -34,10 +34,6 @@ body {
     height: 63px;
 }
 
-.position i {
-    margin: 27px -84px 0 38px;
-}
-
 .position label {
     position: absolute;
 	 top: -9999px;
@@ -50,7 +46,11 @@ body {
     font-weight: bold;
     border: none;
     background-color: #F2F2F2;
-    margin: 15px -52px 12px 105px;
+    margin: 10px -56px 29px 116px;
+}
+
+.fas.fa-map-marker-alt {
+    margin: 27px -84px 0 38px;
 }
 
 /* Titre et exploration */
@@ -59,7 +59,7 @@ body {
     font-family: roboto, sans-serif;
     text-align: center;
     font-size: 1.3rem;
-    background-color: #fff1f1;
+    background-color: #F2F2F2;
     margin: -21px 0 0 0;
     padding: 35px 0 83px 0;
 }
@@ -74,4 +74,34 @@ body {
     box-shadow: 2px 7px 15px -6px grey;
     padding: 21px 48px 21px 48px;
     border: none;
+}
+
+/* Fonctionnement */
+
+.explain {
+    display: flex;
+    justify-content: center;
+    font-family: roboto, sans-serif;
+}
+
+.explain h2 {
+    font-weight: bold;
+
+}
+
+.number_btn {
+    color: #ffffff;
+    background-color: #9356DC;
+    border-radius: 1rem;
+}
+
+.all_btn {
+    background-color: #F2F2F2;
+    border-radius: 1rem;
+    box-shadow: 2px 7px 15px -6px grey;
+}
+
+.btn {
+    display: flex;
+    flex-wrap: wrap;
 }
