--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
     justify-content: center;
     box-shadow: inset 0px 11px 13px -12px #888888;
     background-color: #F2F2F2;
-    height: 63px;
+    height: 85px;
 }
 
 .position label {
@@ -46,11 +46,11 @@ body {
     font-weight: bold;
     border: none;
     background-color: #F2F2F2;
-    margin: 10px -56px 29px 116px;
+    margin: 15px 0 32px 103px;
 }
 
 .fas.fa-map-marker-alt {
-    margin: 27px -84px 0 38px;
+    margin: 26px -84px 0 38px;
 }
 
 /* Titre et exploration */
@@ -59,7 +59,7 @@ body {
     font-family: roboto, sans-serif;
     text-align: center;
     font-size: 1.3rem;
-    background-color: #F2F2F2;
+    background-color: #F7F7F7;
     margin: -21px 0 0 0;
     padding: 35px 0 83px 0;
 }
