--- a/style.css
+++ b/style.css
@@ -90,15 +90,19 @@ body {
 }
 
 .number_btn {
+    display: flex;
+    justify-content: center;
+    width: 32px;
+    height: 32px;
     color: #ffffff;
     background-color: #9356DC;
-    border-radius: 1rem;
+    border-radius: 3rem;
 }
 
 .all_btn {
     background-color: #F2F2F2;
     border-radius: 1rem;
-    box-shadow: 2px 7px 15px -6px grey;
+    box-shadow: 2px 7px 15px -13px grey;
 }
 
 .btn {
