--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ body {
     box-shadow: 2px 7px 15px -13px grey;
 }
 
-.btn {
+.choose .compose .deguste {
     display: flex;
     flex-wrap: wrap;
 }
