--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 
 .container {
     margin: auto;
+    font-weight: bold;
 }
 
 /* Header */ /* Logo */
@@ -43,7 +44,6 @@ body {
 .position input {
     font-family: roboto, sans-serif;
     font-size: 1.5rem;
-    font-weight: bold;
     border: none;
     background-color: #F2F2F2;
     margin: 15px 0 32px 103px;
@@ -67,7 +67,6 @@ body {
 .explore {
     font-family: roboto, sans-serif;
     color: white;
-    font-weight: bold;
     font-size: 1.2rem;
     background: linear-gradient(#FF79DA, #9356DC);
     border-radius: 3rem;
@@ -83,10 +82,8 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: roboto, sans-serif;
-}
-
-.explain h2 {
     font-weight: bold;
+    font-size: 1.2rem;
 }
 
 .number_btn {
@@ -102,7 +99,6 @@ body {
 
 .number_btn p {
     font-weight: bold;
-    margin-left: 15px;
 }
 
 .btn {
@@ -119,10 +115,9 @@ body {
 
 .btn i {
     color: #888888;
-    margin: 35px;
+    margin: 0 60px 0 45px;
 }
 
 .btn a {
-    font-weight: bold;
     font-size: 1.2rem;
 }
