--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ body {
     border-radius: 3rem;
     box-shadow: 2px 7px 15px -6px grey;
     padding: 21px 48px 21px 48px;
+    margin-top: 20px;
     border: none;
 }
 
@@ -84,6 +85,7 @@ body {
     font-family: roboto, sans-serif;
     font-weight: bold;
     font-size: 1.2rem;
+    margin-top: 30px;
 }
 
 .number_btn {
