--- a/css/style.css
+++ b/css/style.css
@@ -125,13 +125,10 @@ body {
 }
 
 
-/* Menu Palette du goût */
+/* Menu Palette du goût */ /* Header */
 
-<<<<<<< HEAD
+
 #logo_menu {
-=======
-#id_menu {
->>>>>>> ab3702181b87ac97115bb1e4559e6337ec3ee053
     display: flex;
     justify-content: center;
 }
