--- a/css/style.css
+++ b/css/style.css
@@ -134,20 +134,29 @@ article {
     display: flex;
     font-family: roboto, sans-serif;
     background-color: #F2F2F2
+    margin: 81px -20px 0px -19px;
 }
 
 nav {
   display: flex;
     flex-direction: column;
     align-items: center;
+    width: 80%;
+    margin: 60px 0 0 45px;
 }
 
 .card_choice {
+    font-family: roboto, sans-serif;
     border-radius: 1rem;
     width: 71%;
     height: 525px;
     background-color: #ffffff;
     margin: 34px;
+
+}
+
+.card_choice h3 p {
+    margin: 0 0 0 0;
 }
 
 .card_choice img {
