--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ body {
 article {
     display: flex;
     font-family: roboto, sans-serif;
-    background-color: #F2F2F2
+    background-color: #F2F2F2;
     margin: 81px -20px 0px -19px;
 }
 
