--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,7 @@ nav a {
 
 }
 
-.card_choice h3, p {
+.card_choice h3 {
     margin: 16px 0 0 26px;
     font-size: 1.5rem;
 }
@@ -177,6 +177,11 @@ nav a {
     color: rgb(0, 143, 79);
     padding: 0.5rem;
     position: absolute;
-    left: 1476px;
+    left: 1420px;
+}
+
+.site {
+    margin: 21px 0 0 26px;
+    font-size: 1.2rem;
 }
 
