--- a/css/style.css
+++ b/css/style.css
@@ -172,12 +172,20 @@ nav a {
     border-radius: 1rem 1rem 0 0;
 }
 
+.card_choice i {
+    font-size: 37px;
+    color: #888888;
+    position: absolute;
+    left: 1515px;
+    top: 1607px;
+}
+
 .new {
     background-color: #99E2D0;
     color: rgb(0, 143, 79);
     padding: 0.5rem;
     position: absolute;
-    left: 1420px;
+    left: 1474px;
 }
 
 .site {
