--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,7 @@ nav a {
     font-size: 1.2rem;
 }
 
-.far.fa-heart {
+.card_choice .far.fa-heart {
     font-size: 37px;
     color: #888888;
     position: absolute;
