--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,11 @@ article {
     margin: 81px -20px 0px -19px;
 }
 
+article h1 {
+    font-size: 1.5rem;
+    margin: -42px 0 0 0;
+}
+
 nav {
   display: flex;
     flex-direction: column;
@@ -190,5 +195,5 @@ nav a {
     color: #888888;
     position: absolute;
     left: 1515px;
-    top: 1607px;
+    margin: -42px 0 0 -22px;
 }
