--- a/css/style.css
+++ b/css/style.css
@@ -133,12 +133,12 @@ body {
 article {
     display: flex;
     font-family: roboto, sans-serif;
+    font-size: 1.5rem;
     background-color: #F2F2F2;
     margin: 81px -20px 0px -19px;
 }
 
 article h1 {
-    font-size: 1.5rem;
     margin: -42px 0 0 0;
 }
 
@@ -147,7 +147,7 @@ nav {
     flex-direction: column;
     align-items: center;
     width: 80%;
-    margin: 60px 0 0 45px;
+    margin: 123px 0 0 0;
 }
 
 nav a {
@@ -161,7 +161,7 @@ nav a {
     width: 71%;
     height: 525px;
     background-color: #ffffff;
-    margin: 34px;
+    margin: 48px 140px 36px 0x;
 
 }
 
