--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,7 @@ nav a {
     width: 71%;
     height: 525px;
     background-color: #ffffff;  
+    margin: 0 0 45px 460px;
 }
 
 .card_choice h3 {
