updt html & css

--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ article {
 }
 
 article h1 {
-    margin: 56px 430px 45px 0;
+    margin: -51px 600px 63px 0;
     font-size: 2rem;
 }
 
@@ -196,4 +196,23 @@ nav a {
     position: absolute;
     left: 1555px;
     margin: -50px 0 0 0;
+}
+
+/* Footer */
+
+.footer {
+    background-color: #383838;
+}
+
+.footer h3 {
+    font-family: shrikhand, sans-serif;
+    color: #ffffff;
+}
+
+.links
+{
+    display: flex;
+    flex-wrap: wrap;
+    text-decoration: none;
+    color: #ffffff;
 }
