--- a/css/style.css
+++ b/css/style.css
@@ -214,10 +214,6 @@ nav a {
     flex-wrap: wrap;
 }
 
-.links ul {
-    display: flex;
-}
-
 .links li {
     list-style-type: none;
 }
@@ -226,6 +222,11 @@ nav a {
     font-family: roboto, sans-serif;
     text-decoration: none;
     color: #ffffff;
+}
+
+.links ul li i {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .links i {
