--- a/css/style.css
+++ b/css/style.css
@@ -85,8 +85,7 @@ body {
 
 .explain {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
     font-family: roboto, sans-serif;
     font-weight: bold;
     font-size: 1.2rem;
