--- a/css/style.css
+++ b/css/style.css
@@ -142,15 +142,15 @@ article h1 {
     font-size: 2rem;
 }
 
-nav {
+#restaurants {
   display: flex;
     flex-direction: column;
-    align-items: center;
+    flex-wrap: wrap;
     width: 80%;
     margin: 123px 0 0 0;
 }
 
-nav a {
+.card_all_choice a {
     text-decoration: none;
     color: black;
 }
@@ -176,6 +176,13 @@ nav a {
     border-radius: 1rem 1rem 0 0;
 }
 
+.card_choice i {
+    font-size: 37px;
+    color: #888888;
+    position: absolute;
+    left: 1555px;
+    margin: -50px 0 0 0;
+}
 .new {
     background-color: #99E2D0;
     color: rgb(0, 143, 79);
@@ -189,13 +196,6 @@ nav a {
     font-size: 1.2rem;
 }
 
-.heart {
-    font-size: 37px;
-    color: #888888;
-    position: absolute;
-    left: 1555px;
-    margin: -50px 0 0 0;
-}
 
 /* Footer */
 
