--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ nav a {
     color: black;
 }
 
-.cards_choice-1, .cards_choice-2 {
+.cards_choice-1 {
     display: flex;
     flex-wrap: wrap;
 }
