--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ body {
 
 /* Fonctionnement */
 
-.explain {
+.card_functioning {
     display: flex;
     flex-direction: row;
     font-family: roboto, sans-serif;
@@ -124,9 +124,6 @@ body {
     margin: 0 60px 0 45px;
 }
 
-.btn a {
-    font-size: 1.2rem;
-}
 /* Main */ /* Présentation des restaurants */
 
 article {
