--- a/css/style.css
+++ b/css/style.css
@@ -87,18 +87,19 @@ body {
     font-family: roboto, sans-serif;
     font-weight: bold;  
     font-size: 1.2rem;
+    padding: 16px 0 90px 0;
 }
 
 .explain h2 {
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    justify-content: center;
 }
 
 .card_functioning {
     display: flex;
     flex-direction: row;
     margin-top: 30px;
+    gap: 80px;
 }
 
 .number_btn {
@@ -112,10 +113,6 @@ body {
     margin: 0 0 0 -13px;
 }
 
-.number_btn p {
-    font-weight: bold;
-}
-
 .btn {
     display: flex;
     flex-wrap: wrap;
@@ -123,9 +120,8 @@ body {
     background-color: #F2F2F2;
     border-radius: 2rem;
     box-shadow: 2px 7px 15px -13px grey;
-    width: 33%;
+    width: 26%;
     height: 100px;
-    margin: 14px;
 }
 
 .btn i {
