--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ body {
 .card_functioning {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     margin-top: 30px;
     gap: 80px;
 }
