--- a/css/style.css
+++ b/css/style.css
@@ -140,12 +140,12 @@ body {
     background-color: #F2F2F2;
 }
 
-.title {
+#restaurants h2{
    display: flex;
    align-items: center;
 }
 
-section a {
+#restaurants a {
     text-decoration: none;
     color: black;
 }
