--- a/css/style.css
+++ b/css/style.css
@@ -140,11 +140,6 @@ body {
     background-color: #F2F2F2;
 }
 
-#restaurants h2{
-   display: flex;
-   align-items: center;
-}
-
 #restaurants a {
     text-decoration: none;
     color: black;
@@ -154,6 +149,11 @@ body {
     display: flex;
    flex-wrap: wrap;
    margin: 93px 0 40px 0;
+}
+
+.title {
+   display: flex;
+   align-items: center;
 }
 
 .card_choice {
