--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ section a {
     border-radius: 1rem 1rem 0 0;
 }
 
-.far.fa-heart {
+.heart {
     font-size: 37px;
     color: #888888;
     position: absolute;
