--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,8 @@ section a {
     color: rgb(0, 143, 79);
     padding: 0.5rem;
     position: absolute;
-    left:5%;
+    right: 5%;
+    top: 5%;
     z-index: 2;
 }
 
