--- a/css/style.css
+++ b/css/style.css
@@ -135,8 +135,7 @@ body {
 
 /* Main */ /* Présentation des restaurants */
 
-#restaurants {
-    display: flex;   
+#restaurants { 
     background-color: #F2F2F2;
 }
 
@@ -152,6 +151,8 @@ section a {
 .all_cards {
     display: flex;
    flex-wrap: wrap;
+   flex-direction: row;
+   justify-content: space-between;
    margin: 93px 0 40px 0;
 }
 
@@ -161,7 +162,8 @@ section a {
     border-radius: 1rem;
     width: 45em;
     height: 363px;
-    background-color: #ffffff;  
+    background-color: #ffffff; 
+    box-shadow: 2px 7px 15px -13px grey; 
     margin: 13px 20px 39px 45px;
     position: relative;
     z-index: 1;
