--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,10 @@ body {
     padding: 35px 0 83px 0;
 }
 
+.principal_title h2, p {
+    margin-top: 20px;
+}
+
 .explore {
     color: white;
     font-size: 1.2rem;
@@ -86,7 +90,7 @@ body {
 .explain {
     font-weight: bold;  
     font-size: 1.2rem;
-    padding: 16px 0 90px 0;
+    padding: 60px 0 100px 0;
 }
 
 .explain h2 {
@@ -137,10 +141,12 @@ body {
 
 #restaurants { 
     background-color: #F2F2F2;
+    padding: 3rem 20rem;
 }
 
 section h2 {
     text-align: center;
+    font-size: 2rem;
 }
 
 section a {
@@ -152,7 +158,7 @@ section a {
     display: flex;
    flex-wrap: wrap;
    flex-direction: row;
-   justify-content: space-between;
+   justify-content: space-evenly;
    margin: 93px 0 40px 0;
 }
 
@@ -201,7 +207,7 @@ section a {
 }
 
 .site {
-    margin: 21px 0 0 26px;
+    margin: 10px 0 0 25px;
     font-size: 1.2rem;
 }
 
