--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,9 @@ section a {
 /* Footer */
 
 .footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #383838;
 }
 
