--- a/css/style.css
+++ b/css/style.css
@@ -215,14 +215,16 @@ section a {
     background-color: #383838;
 }
 
+footer a:hover {
+    border-bottom: solid 2px transparent;
+}
+
 .logo-footer {
     font-family: shrikhand, sans-serif;
     font-weight: normal;
     color: #ffffff;
     margin: 18px 0 3px 30px;
 }
-
-
 
 .links li {
     display: flex;
