--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,10 @@ section a {
     background-color: #383838;
 }
 
+.footer a {
+   text-decoration: none;
+}
+
 .logo-footer {
     font-family: shrikhand, sans-serif;
     font-weight: normal;
