--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     font-weight: bold;
 }
 
-/* Body */
+    /*Page accueil*/  /* Body */
 
 .container {
     margin: auto;
@@ -242,3 +242,22 @@ section a {
     color: #ffffff;
     margin: 0 8px 0 0;
 }
+
+/*Page la palette du goût */
+
+.header-2 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.header-2 i {
+    display: flex;
+    
+}
+
+#logo-menus {
+    display: flex;
+    justify-content: center;
+}
+
