--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
     margin: auto;
 }
 
-/* Header */ /* Logos */ 
+/* Header */  
 
 #logo {
     display: block;
@@ -20,11 +20,6 @@
     width: 13%;
     height: auto;
     padding: 10px 0px 15px 0px;
-}
-
-#logo_menu {
-	display: flex;
-	justify-content: center;
 }
 
 /* Bannière lieu page accueil */
@@ -247,17 +242,23 @@ section a {
 
 .header-2 {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    background-color: #F2F2F2;
+    padding: 20px;
 }
 
 .header-2 i {
-    display: flex;
-    
+    color: #383838;
+    font-size: 2rem;
 }
 
-#logo-menus {
-    display: flex;
-    justify-content: center;
+.logo-menus {
+    margin: auto;
+}
+
+.logo-menus {
+    width: 60%;
+    height: auto;
 }
 
