--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,12 @@ section a {
 
 /*Page la palette du goût */
 
+/* Body */
+
+.container-2 {
+    background-image:url(images/palettedugout.jpg);
+}
+
 .header-2 {
     display: flex;
     justify-content: center;
@@ -260,5 +266,11 @@ section a {
 .logo-menus img {
     width: 60%;
     height: auto;
+}
+
+/* Menu La palette du goût */
+
+fieldset {
+    border: none;
 }
 
