--- a/css/style.css
+++ b/css/style.css
@@ -246,12 +246,7 @@ section a {
     margin: auto;
 }
 
-/* image de menu */
-
-.img-menu {
-    width: 63%;
-    height: auto;
-}
+/* Header */
 
 .header-2 {
     display: flex;
@@ -273,6 +268,12 @@ section a {
 .logo-menus img {
     width: 60%;
     height: auto;
+}
+
+#banniere-menu {
+    width: 100%;
+    height: 26em;
+    object-fit: cover;
 }
 
 /* Menu La palette du goût */
