--- a/css/style.css
+++ b/css/style.css
@@ -271,9 +271,8 @@ section a {
 }
 
 #banniere-menu {
-    position: absolute;
+    position: relative;
     z-index: 1;
-    width: 100%;
 }
 
 #banniere-menu img {
@@ -284,14 +283,19 @@ section a {
 
 /* Menu La palette du goût */
 
-.menu {
-    background-color: #F2F2F2;
-    position: relative;
-    z-index: 2;
-    border-radius: 2rem;
-}
-
 fieldset {
+    background-color: #F2F2F2;
     border: none;
+    position: absolute;
+    z-index: 2;
+    top: 36rem;
+    width: 100%;
+    height: auto;
+    border: 2rem;
+    margin: 0;
 }
 
+.title {
+    font-family: shrikhand, sans-serif;
+    font-weight: normal;
+}
