--- a/css/style.css
+++ b/css/style.css
@@ -203,14 +203,14 @@ section a {
 
 /* Footer */
 
-.footer {
+.footer, .footer-menu {
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #383838;
 }
 
-.footer a {
+.footer a, .footer-menu a {
    text-decoration: none;
 }
 
