--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ section a {
 fieldset {
     background-color: #F2F2F2;
     border: none;
-    border-radius: 2rem;
+    border-radius: 4rem 4rem 0 0;
     margin: 0;
 }
 
