--- a/css/style.css
+++ b/css/style.css
@@ -312,6 +312,10 @@ fieldset {
 }
 
 .cards_menu {
-
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #ffffff;
+    border-radius: 2rem;
+    box-shadow: 2px 7px 15px -13px grey;
 }
 
