--- a/css/style.css
+++ b/css/style.css
@@ -277,10 +277,14 @@ section a {
 }
 
 fieldset {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #F2F2F2;
     border: none;
     border-radius: 4rem 4rem 0 0;
     margin: 0;
+    padding-bottom: 70px;
 }
 
 .title h1 {
@@ -318,7 +322,7 @@ fieldset {
     box-shadow: 2px 7px 15px -13px grey;
     width: 33rem;
     height: 9rem;
-    margin: 21px 0 0 0;
+    margin: 38px 76px 0 0;
     padding: 21px 0 11px 18px;
 }
 
