update html & css

--- a/css/style.css
+++ b/css/style.css
@@ -203,7 +203,7 @@ section a {
 
 /* Footer */
 
-.footer, .footer-menu {
+.footer {
     display: flex;
     flex-direction: column;
     align-items: center;
