--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,9 @@
 /* Titre et exploration */
 
 .principal_title {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     font-size: 1.3rem;
     background-color: #F7F7F7;
     margin: -21px 0 0 0;
@@ -65,15 +67,16 @@
 }
 
 .explore {
-    color: white;
-    font-size: 1.2rem;
     background: linear-gradient(#FF79DA, #9356DC);
-    border-radius: 3rem;
+    border-radius: 4rem;
     box-shadow: 2px 7px 15px -6px grey;
-    padding: 21px 48px 21px 48px;
+    padding-top: 8px;
     margin-top: 20px;
     border: none;
     cursor: pointer;
+    width: 17em;
+    height: 4em;
+    text-align: center;
 }
 
 /* Fonctionnement */
