--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,11 @@
     text-align: center;
 }
 
+.explore a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
 /* Fonctionnement */
 
 .explain {
