--- a/css/style.css
+++ b/css/style.css
@@ -136,8 +136,7 @@
     margin: 0 60px 0 45px;
 }
 
-.card_functioning i:hover, .btn:hover{
-    color: #9356DC;
+.btn:hover{
     background-color: #F5EDFF;
 }
 
@@ -145,7 +144,7 @@
 /* Main */ /* Présentation des restaurants */
 
 #restaurants { 
-    background-color: #272727;
+    background-color: #F2F2F2;
     padding: 3rem 20rem;
 }
 
