--- a/css/style.css
+++ b/css/style.css
@@ -286,7 +286,7 @@ section a {
 /* Menu La palette du goût */
 
 main {
-   background-image: url(images/lapalettedugout.jpg) alt="photo d'un plat";
+   background-image: url(images/palettedugout.jpg);
 }
 
 fieldset {
