--- a/css/style.css
+++ b/css/style.css
@@ -293,8 +293,8 @@ fieldset {
     background-color: #F2F2F2;
     border: none;
     border-radius: 4rem 4rem 0 0;
-    margin: 0;
-    padding-bottom: 70px;
+    margin: -65px 0 0 0;
+    position: relative;
 }
 
 .title h1 {
@@ -361,7 +361,7 @@ label i {
     border-radius: 3rem;
     box-shadow: 2px 7px 15px -6px grey;
     padding: 21px 48px 21px 48px;
-    margin-top: 20px;
+    margin: 30px;
     border: none;
     cursor: pointer;
 }
