--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 #logo {
     display: block;
     margin: auto;
-    width: 13%;
+    width: 23%;
     height: auto;
     padding: 10px 0px 15px 0px;
 }
@@ -127,7 +127,7 @@
     background-color: #F2F2F2;
     border-radius: 2rem;
     box-shadow: 2px 7px 15px -13px grey;
-    width: 23%;
+    width: 100%;
     height: 100px;
 }
 
@@ -160,8 +160,7 @@ section a {
 
 .all_cards {
     display: flex;
-   flex-wrap: wrap;
-   flex-direction: row;
+   flex-direction: column;
    justify-content: space-evenly;
    margin: 93px 0 40px 0;
 }
@@ -370,13 +369,30 @@ label i {
 /* Media Queries */
 
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
 
     /* Accueil */
+    /* Header */
+
+    #logo {
+        width: 13%;
+        height: auto;
+    }
 
     .card_functioning {
         flex-direction: row;
+    }
 
+    .btn {
+        width: 23%;
+    }
+
+    /* Restaurants */
+
+    .all_cards {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
     }
 
     
