--- a/css/style.css
+++ b/css/style.css
@@ -369,7 +369,7 @@ label i {
 /* Media Queries */
 
 
-@media all and (min-width: 998px) {
+@media screen and (min-width: 993px) {
 
     /* Accueil */
     /* Header */
