--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 
     .card_functioning {
         flex-direction: row;
+        gap: 80px;
     }
 
     .btn {
@@ -22,10 +23,14 @@
     }
 
     /* Fonctionnement */
+
+    .explain {
+        padding: 0;
+    }
     
     .explain h2 {
-        display: flex;
-        justify-content: center;
+        text-align: center;
+        font-size: 2rem;
     }
 
     /* Restaurants */
@@ -34,6 +39,24 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-evenly;
+    }
+
+    .card_choice {
+        width: 40em;
+        height: 363px;
+    }
+    
+    .card_choice img {
+        width: 100%;
+        height: 269px;
+    }
+
+    .card_choice h3 {
+        margin: 16px 0 0 26px;
+    }
+
+    .site {
+        margin: 10px 0 0 25px;
     }
 
     /* Footer */
@@ -67,7 +90,7 @@
 #logo {
     display: block;
     margin: auto;
-    width: 23%;
+    width: 35%;
     height: auto;
     padding: 10px 0px 15px 0px;
 }
@@ -125,12 +148,12 @@
     background: linear-gradient(#FF79DA, #9356DC);
     border-radius: 4rem;
     box-shadow: 2px 7px 15px -6px grey;
-    padding-top: 8px;
+    padding-top: 3px;
     margin-top: 20px;
     border: none;
     cursor: pointer;
-    width: 17em;
-    height: 4em;
+    width: 14em;
+    height: 69px;
     text-align: center;
 }
 
@@ -144,16 +167,20 @@
 .explain {
     font-weight: bold;  
     font-size: 1.2rem;
-    padding: 60px 0 100px 0;
+    padding: 60px 15px 100px 27px;
 }
 
+.explain h2 {
+    text-align: center;
+    font-size: 2rem;
+}
 
 .card_functioning {
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-top: 30px;
-    gap: 80px;
+    gap: 25px;
 }
 
 .number_btn {
@@ -199,9 +226,8 @@
     padding: 3rem 20rem;
 }
 
-.explain h2 {
-    text-align: center;
-    font-size: 2rem;
+#restaurants h2 {
+    padding: 40px 0 0 30px;
 }
 
 section a {
@@ -209,19 +235,12 @@ section a {
     color: black;
 }
 
-.all_cards {
-    display: flex;
-   flex-direction: column;
-   justify-content: space-evenly;
-   margin: 93px 0 40px 0;
-}
-
 .card_choice {
     display: flex;
     flex-direction: column;
     border-radius: 1rem;
     width: 40em;
-    height: 363px;
+    height: 300px;
     background-color: #ffffff; 
     box-shadow: 2px 7px 15px -13px grey; 
     margin: 13px 20px 39px 45px;
@@ -230,13 +249,13 @@ section a {
 }
 
 .card_choice h3 {
-    margin: 16px 0 0 26px;
+    margin: 4px 0 0 13px;
     font-size: 1.5rem;
 }
 
 .card_choice img {
     width: 100%;
-    height: 269px;
+    height: 277px;
     object-fit: cover;
     border-radius: 1rem 1rem 0 0;
 }
@@ -261,7 +280,7 @@ section a {
 }
 
 .site {
-    margin: 10px 0 0 25px;
+    margin: 10px 0 0 13px;
     font-size: 1.2rem;
 }
 
@@ -280,7 +299,11 @@ section a {
     font-family: shrikhand, sans-serif;
     font-weight: normal;
     color: #ffffff;
-    margin: 18px 0 3px 30px;
+    padding: 18px 0 3px 30px;
+}
+
+.links ul {
+    padding: 0 0 22px 18px;
 }
 
 .links li {
