--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@
 
 .btn i {
     color: #888888;
-    margin: 0 60px 0 45px;
+    margin: 0 26px 0 32px;
 }
 
 .btn:hover{
@@ -165,17 +165,18 @@ section a {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 75px;
 }
 
 .card_choice {
     display: flex;
     flex-direction: column;
     border-radius: 1rem;
-    width: 30em;
+    width: 26em;
     height: 298px;
     background-color: #ffffff; 
     box-shadow: 2px 7px 15px -13px grey; 
-    margin: 13px 20px 39px 45px;
+    margin: 48px 0 0 0;
     position: relative;
 }
 
@@ -231,10 +232,12 @@ section a {
     font-weight: normal;
     color: #ffffff;
     padding: 18px 0 3px 30px;
+    margin: 0;
 }
 
 .links ul {
     padding: 0 0 22px 18px;
+    margin: 0;
 }
 
 .links li {
