--- a/css/style.css
+++ b/css/style.css
@@ -1,451 +1,240 @@
-/* Tout le contenu des pages */
-
+@charset "UTF-8";
+/*Variables*/
+/*Mixins*/
+/* Tout le contenu de la page */
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-    /*Page accueil*/  /* Body */
-
+/* Page accueil*/
+/*Body*/
 .container {
-    margin: auto;
-    font-family: roboto, sans-serif;
-    font-weight: bold;
+  margin: auto;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
 }
 
-/* Header */  
-
+/*Header*/
 #logo {
-    display: block;
-    margin: auto;
-    width: 35%;
-    height: auto;
-    padding: 10px 0px 15px 0px;
+  display: block;
+  margin: auto;
+  width: 35%;
+  height: auto;
+  padding: 10px 0 15px 0;
 }
 
-/* Bannière lieu page accueil */
-
+/*Bannière lieu page accueil*/
 .position {
-    display: flex;
-    justify-content: center;
-    box-shadow: inset 0px 11px 13px -12px #888888;
-    background-color: #F2F2F2;
-    height: 85px;
+  display: flex;
+  justify-content: center;
+  box-shadow: inset 0px 11px 13px -12px #888888;
+  background-color: #f2f2f2;
+  height: 85px;
 }
-
 .position label {
-    position: absolute;
-	 top: -9999px;
- 	 left: -9999px;
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
 }
-
 .position input {
-    font-size: 1.5rem;
-    border: none;
-    background-color: #F2F2F2;
-    margin: 15px 0 32px 105px;
+  font-size: 1.5rem;
+  border: none;
+  background-color: #f2f2f2;
+  margin: 15px 0 32px 105px;
 }
 
-.fas.fa-map-marker-alt {
-    margin: 26px -84px 0 38px;
-    font-size: 1.2rem;
+.position > i {
+  margin: 26px -84px 0 38px;
+  font-size: 1.2rem;
 }
 
-/* Titre et exploration */
-
+/*Titre et exploration*/
 .principal_title {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 1.3rem;
-    background-color: #F7F7F7;
-    margin: -21px 0 0 0;
-    padding: 12px 25px 74px 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.3rem;
+  background-color: #f7f7f7;
+  margin: -21px 0 0 0;
+  padding: 12px 25px 74px 25px;
 }
-
 .principal_title p {
-    text-align: center;
-    margin: 20px 0 20px 0;
+  margin: 20px 0 20px 0;
 }
-
-.principal_title h2 {
-    text-align: center;
+.principal_title p h2 {
+  text-align: center;
 }
 
 .explore {
-    background: linear-gradient(#FF79DA, #9356DC);
-    border-radius: 4rem;
-    box-shadow: 2px 7px 15px -6px grey;
-    padding-top: 3px;
-    margin-top: 20px;
-    border: none;
-    cursor: pointer;
-    width: 14em;
-    height: 69px;
-    text-align: center;
+  background: linear-gradient(#ff79da, #9356DC);
+  border-radius: 4rem;
+  box-shadow: 2px 7px 15px -13px #888888;
+  padding-top: 3px;
+  margin-top: 20px;
+  border: none;
+  width: 14em;
+  height: 69px;
+  text-align: center;
 }
-
 .explore a {
-    color: #ffffff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 
-/* Fonctionnement */
-
+/*Fonctionnement*/
 .explain {
-    font-weight: bold;  
-    font-size: 1.2rem;
-    padding: 60px 15px 100px 27px;
+  font-weight: bold;
+  font-size: 1.2rem;
+  padding: 60px 15px 100px 27px;
 }
-
 .explain h2 {
-    text-align: center;
-    font-size: 2rem;
+  text-align: center;
+  font-size: 2rem;
 }
 
 .card_functioning {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-top: 30px;
-    gap: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 30px;
+  gap: 25px;
 }
 
 .number_btn {
-    display: flex;
-    justify-content: center;
-    width: 55px;
-    height: 55px;
-    color: #ffffff;
-    background-color: #9356DC;
-    border-radius: 3rem;
-    margin: 0 0 0 -13px;
+  display: flex;
+  justify-content: center;
+  width: 55px;
+  height: 55px;
+  color: #fff;
+  background-color: #9356DC;
+  border-radius: 3rem;
+  margin: 0 0 0 -13px;
 }
-
 .number_btn p {
-    margin: 15px 0 0 0;
+  margin: 15px 0 0 0;
 }
 
 .btn {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    background-color: #F2F2F2;
-    border-radius: 2rem;
-    box-shadow: 2px 7px 15px -13px grey;
-    width: 100%;
-    height: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  background-color: #f2f2f2;
+  border-radius: 2rem;
+  box-shadow: 2px 7px 15px -13px #888888;
+  width: 100%;
+  height: 100px;
 }
-
+.btn:hover {
+  background-color: #f5edff;
+}
 .btn i {
-    color: #888888;
-    margin: 0 26px 0 32px;
+  color: #888888;
+  margin: 0 26px 0 32px;
+}
+.btn i:hover {
+  color: #9356DC;
 }
 
-.btn:hover{
-    background-color: #F5EDFF;
+/*Main*/
+/*Présentation des restaurants*/
+#restaurants {
+  background-color: #f2f2f2;
 }
-
-
-/* Main */ /* Présentation des restaurants */
-
-#restaurants { 
-    background-color: #F2F2F2;
-}
-
 #restaurants h2 {
-    padding: 40px 0 0 30px;
+  padding: 40px 0 0 30px;
 }
 
 section a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: #000000;
 }
 
 .all_cards {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-bottom: 75px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 75px;
 }
 
 .card_choice {
-    display: flex;
-    flex-direction: column;
-    border-radius: 1rem;
-    width: 26em;
-    height: 298px;
-    background-color: #ffffff; 
-    box-shadow: 2px 7px 15px -13px grey; 
-    margin: 48px 0 0 0;
-    position: relative;
+  display: flex;
+  flex-direction: column;
+  border-radius: 1rem;
+  width: 26em;
+  height: 298px;
+  background-color: #fff;
+  box-shadow: 2px 7px 15px -13px #888888;
+  width: 26em;
+  height: 298px;
+  position: relative;
+  margin: 48px 0 0 0;
 }
-
 .card_choice h3 {
-    margin: 4px 0 0 13px;
-    font-size: 1.5rem;
+  margin: 4px 0 0 13px;
+  font-size: 1.5rem;
 }
-
 .card_choice img {
-    width: 100%;
-    height: 218px;
-    object-fit: cover;
-    border-radius: 1rem 1rem 0 0;
+  width: 100%;
+  height: 218px;
+  object-fit: cover;
+  border-radius: 1rem 1rem 0 0;
+}
+.card_choice .heart {
+  font-size: 37px;
+  color: #888888;
+  position: absolute;
+  z-index: 2;
+  right: 5%;
+  bottom: 5%;
+}
+.card_choice .new {
+  background-color: #99e2d0;
+  color: #008f4f;
+  position: absolute;
+  z-index: 2;
+  right: 5%;
+  top: 5%;
+  padding: 0.5rem;
+}
+.card_choice .site {
+  margin: 10px 0 0 13px;
+  font-size: 1.2rem;
 }
 
-.heart {
-    font-size: 37px;
-    color: #888888;
-    position: absolute;
-    z-index: 2;
-    right: 5%;
-    bottom: 5%;
-}
-
-.new {
-    background-color: #99E2D0;
-    color: rgb(0, 143, 79);
-    padding: 0.5rem;
-    position: absolute;
-    right: 5%;
-    top: 5%;
-    z-index: 2;
-}
-
-.site {
-    margin: 10px 0 0 13px;
-    font-size: 1.2rem;
-}
-
-
-/* Footer */
-
+/*Footer*/
 .footer {
-    background-color: #383838;
+  background-color: #383838;
 }
-
 .footer a {
-   text-decoration: none;
+  text-decoration: none;
 }
 
 .logo-footer {
-    font-family: shrikhand, sans-serif;
-    font-weight: normal;
-    color: #ffffff;
-    padding: 18px 0 3px 30px;
-    margin: 0;
+  font-family: "Shrikhand", sans-serif;
+  font-weight: normal;
+  color: #fff;
+  padding: 18px 0 3px 30px;
+  margin: 0;
 }
 
 .links ul {
-    padding: 0 0 22px 18px;
-    margin: 0;
+  padding: 0 0 22px 18px;
+  margin: 0;
 }
-
-.links li {
-    list-style-type: none;
-    margin: 8px;
+.links ul li {
+  list-style-type: none;
+  margin: 8px;
 }
-
 .links ul li a {
-    text-decoration: none;
-    color: #ffffff;
+  text-decoration: none;
+  color: #fff;
 }
 
 .links i {
-    color: #ffffff;
-    margin: 0 8px 0 0;
+  color: #fff;
+  margin: 0 8px 0 0;
 }
 
-/*Page la palette du goût */
+/*Page palette du goût*/
 
-/* Header */
-
-.header-2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #F2F2F2;
-    padding: 20px;
-}
-
-.header-2 i {
-    color: #383838;
-    font-size: 2rem;
-}
-
-.logo-menus img {
-    display: flex;
-    align-items: center;
-    width: 60%;
-    margin: auto;
-}
-
-#banniere-menu img {
-    width: 100%;
-    height: 26em;
-    object-fit: cover;
-}
-
-/* Menu La palette du goût */
-
-
-fieldset {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #F2F2F2;
-    border: none;
-    border-radius: 4rem 4rem 0 0;
-    margin: -65px 0 0 0;
-    position: relative;
-}
-
-.title h1 {
-    font-family: shrikhand, sans-serif;
-    font-weight: normal;
-    text-align: center;
-}
-
-.title i {
-    font-size: 37px;
-    color: #383838;
-    position: absolute;
-    right: 15%;
-}
-
-.all_cards-menu {
-    display: flex;
-    margin: 89px 0 40px 43px;
-}
-
-.menu-type {
-    text-transform: uppercase;
-    padding: 0.5rem;
-    border-bottom: 3px solid #99E2D0;
-    width: 12%;
-}
-
-.cards_menu {
-    background-color: #ffffff;
-    border-radius: 2rem;
-    box-shadow: 2px 7px 15px -13px grey;
-    width: 33rem;
-    height: 9rem;
-    margin: 41px 43px 0 0;
-    padding: 21px 0 11px 18px;
-    cursor: pointer;
-}
-
-.cards_menu h2, p {
-    margin: 13px 17px 15px 8px;
-}
-
-label {
-    display: flex;
-    flex-direction: row-reverse;
-}
-
-label p {
-    margin: -31px 20px 0 0;
-}
-
-label input {
-    position: absolute;
-    left: -14em;
-}
-
-label i {
-    color: transparent;
-}
-
-.command_btn {
-    color: white;
-    font-size: 1.2rem;
-    background: linear-gradient(#FF79DA, #9356DC);
-    border-radius: 3rem;
-    box-shadow: 2px 7px 15px -6px grey;
-    padding: 21px 48px 21px 48px;
-    margin: 30px;
-    border: none;
-    cursor: pointer;
-}
-
-/* Media Queries */
-
-@media screen and (min-width: 760px) {
-
-    /* Accueil */
-    /* Header */
-
-    #logo {
-        width: 13%;
-        height: auto;
-    }
-
-    .card_functioning {
-        flex-direction: row;
-        gap: 80px;
-    }
-
-    .btn {
-        width: 23%;
-    }
-
-    /* Fonctionnement */
-    
-    .explain h2 {
-        text-align: center;
-        font-size: 2rem;
-    }
-
-    /* Restaurants */
-
-    #restaurants {
-        margin-top: 9em;
-    }
-
-    #restaurants h2 {
-        font-size: 2rem;
-        text-align: center;
-        padding-bottom: 1em;
-    }
-
-    .all_cards {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        padding: 15px 100px 50px 100px;
-        margin: 0;
-        row-gap: 4em;
-    }
-
-    .card_choice {
-        width: 52em;
-        height: 443px;
-    }
-    
-    .card_choice img {
-        width: 100%;
-        height: 352px;
-    }
-
-    .card_choice h3 {
-        margin: 16px 0 0 26px;
-    }
-
-    .site {
-        margin: 10px 0 0 25px;
-    }
-
-    /* Footer */
-
-    .footer {
-         display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-   
-    .links li {
-        display: flex;
-        justify-content: center;
-    }
-}
+/*# sourceMappingURL=style.css.map */
