--- a/sass/style.scss
+++ b/sass/style.scss
@@ -97,13 +97,14 @@ $pinklight: #f5edff;
     background-color: $lightgray;
     margin: -21px 0 0 0;
     padding: 12px 25px 74px 25px;
-    p {
-        margin: 20px 0 20px 0;
+        p {
+            margin: 20px 0 20px 0;
+            text-align: center;
+        }
             h2 { 
                 text-align: center;
             }
      }
-}
 
 .explore {
     background: linear-gradient($colorsecondary, $colorprimary);
@@ -183,10 +184,11 @@ $pinklight: #f5edff;
         }
 }
 
-section a 
-{
+section {
+    a {
     text-decoration: none;
     color: #000000;
+    }
 }
 
 .all_cards {
@@ -252,9 +254,11 @@ section a
     margin: 0;
 }
 
-.links ul {
-    padding: 0 0 22px 18px;
-    margin: 0;
+.links {
+    ul {
+        padding: 0 0 22px 18px;
+        margin: 0;
+    }
         li {
             list-style-type: none;
             margin: 8px;
@@ -263,11 +267,69 @@ section a
                 color: $white;
             }
         }
-}
-
-.links i {
-    color: $white;
-    margin: 0 8px 0 0;
+        i {
+            color: $white;
+            margin: 0 8px 0 0;
+        }            
 }
 
 /*Page palette du goût*/ 
+
+.header-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $mediumgray;
+    padding: 20px;
+        i {
+            color: $greyblack;
+            font-size: 2rem;
+        }
+}
+
+.logo-menus {
+    img {
+        display: flex;
+        align-items: center;
+        width: 60%;
+        margin: auto;
+    }
+}
+
+#banniere-menu {
+    img {
+        width: 100%;
+        height: 26em;
+        object-fit: cover;
+    }
+}
+
+/*Menu La palette du goût*/ 
+
+fieldset {
+    @include column;
+    align-items: center;
+    background-color: $mediumgray;
+    border: none;
+    border-radius: 4rem 4rem 0 0;
+    margin: -65px 0 0 0;
+    position: relative;
+}
+
+.title {
+        h1 {
+            @include shrikhand;
+            font-weight: normal;
+            margin: 30px 61px 5px 0;
+        }
+            i {
+                font-size: 28px;
+                color: $greyblack;
+                position: absolute;
+                right: 5%;
+            }
+}
+
+.all_cards {
+    display: flex;
+}
