--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,7 @@ section a {
   margin: 0 8px 0 0;
 }
 
-/*Page palette du goût*/
+/*Pages des menus*/
 .header-2 {
   display: flex;
   justify-content: center;
@@ -287,6 +287,54 @@ fieldset {
 
 .all_cards {
   display: flex;
+  margin: 89px 0 40px 43px;
+}
+
+.menu-type {
+  text-transform: uppercase;
+  padding: 0.5rem;
+  border-bottom: 3px solid #99e2d0;
+  width: 12%;
+}
+
+.cards_menu {
+  background-color: #fff;
+  border-radius: 1rem;
+  box-shadow: 2px 7px 15px -13px #888888;
+  width: 100%;
+  height: 6em;
+  margin: 41px 52px 0 0;
+  padding: 21px 0 11px 18px;
+  cursor: pointer;
+}
+.cards_menu h2, .cards_menu p {
+  margin: 0 17px 15px 8px;
+}
+.cards_menu label {
+  display: flex;
+  flex-direction: row-reverse;
+}
+.cards_menu label p {
+  margin: -31px 20px 0 0;
+}
+.cards_menu label input {
+  position: absolute;
+  left: -14em;
+}
+.cards_menu label i {
+  color: transparent;
+}
+
+.command_btn {
+  color: #fff;
+  font-size: 1.2rem;
+  background: linear-gradient(#ff79da, #9356DC);
+  border-radius: 3rem;
+  box-shadow: 2px 7px 15px -13px #888888;
+  padding: 21px 48px 21px 48px;
+  margin: 30px;
+  border: none;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
