--- a/sass/style.scss
+++ b/sass/style.scss
@@ -273,7 +273,7 @@ section {
         }            
 }
 
-/*Page palette du goût*/ 
+/*Pages des menus*/ 
 
 .header-2 {
     display: flex;
@@ -332,4 +332,52 @@ fieldset {
 
 .all_cards {
     display: flex;
+    margin: 89px 0 40px 43px;
+}
+
+.menu-type {
+    text-transform: uppercase;
+    padding: 0.5rem;
+    border-bottom: 3px solid $colortertiary;
+    width: 12%;
+}
+
+.cards_menu {
+    background-color: $white;
+    border-radius: 1rem;
+    @include card-shadow;
+    width: 100%;
+    height: 6em;
+    margin: 41px 52px 0 0;
+    padding: 21px 0 11px 18px;
+    cursor: pointer;
+        h2, p {
+            margin: 0 17px 15px 8px;
+        }
+            label {
+                display: flex;
+                flex-direction: row-reverse;
+                    p {
+                        margin: -31px 20px 0 0;
+                    }
+                        input {
+                            position: absolute;
+                            left: -14em;
+                        }
+                            i {
+                                color: transparent;
+                            }
+            }
+}
+
+.command_btn {
+    color: $white;
+    font-size: 1.2rem;
+    background: linear-gradient($colorsecondary, $colorprimary);
+    border-radius: 3rem;
+    @include card-shadow;
+    padding: 21px 48px 21px 48px;
+    margin: 30px;
+    border: none;
+    cursor: pointer;
 }
